# underwriting_insurance

./: .gitignore  Dockerfile  README.md  pyproject.toml
.config /: logging_config.yaml  model_config.yaml
.github/workflows/: ci+cd.yaml
notebooks/: chatbot.ipynb
src/core/: agent.py  auth.py  chitchat.py  chitchat_embeddings.pkl  database.py  prompts.py  security.py  security_embeddings.pkl
src/core/tools/: comparator.py  rag_tool.py
src/infrastructure/: advanced_broker_vehicular.py  api.py  app.py  chatbot_rules.py  client_requests.py  core.py  ingest.py  main.py  rules.py
src/infrastructure/OLD/: OLD_broker_bot.py  OLD_broker_vehicular.py
src/infrastructure/api/: api.py
src/interface/: app.py
test/: test_app.py
